# refua-notebook

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: refua_antibody_design.ipynb  refua_antibody_design_her2.ipynb  refua_antibody_design_pd_l1.ipynb  refua_folding.ipynb  refua_multiligand_dhfr.ipynb  refua_peptide_design_glp1r.ipynb  refua_peptide_design_integrin_avb3.ipynb  refua_peptide_design_mdm2.ipynb  refua_ppi_cd47_sirpa.ipynb  refua_showcase_mpro_nirmatrelvir.ipynb
labextension/: package.json  tsconfig.json
labextension/src/: index.ts  render.ts  typings.d.ts
labextension/style/: index.css
refua_notebook/: __init__.py  extension.py  mime.py  utils.py
refua_notebook/widgets/: __init__.py  admet.py  affinity.py  complex.py  molstar.py  protein.py  protein_properties.py  sm.py  smiles.py
tests/: __init__.py  test_admet.py  test_affinity.py  test_complex.py  test_extension.py  test_jupyterlab_playwright.py  test_jupyterlab_smoke.py  test_mime_formatter.py  test_mimebundle.py  test_molstar.py  test_protein.py  test_protein_properties_widget.py  test_sm.py  test_smiles.py  test_utils.py
